--- a/Css/index.css
+++ b/Css/index.css
@@ -2,4 +2,8 @@
     width: 500px;
     height: 500px;
     border: 1px solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
