--- a/Css/index.css
+++ b/Css/index.css
@@ -18,6 +18,7 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 	height: 100vh;
 	width: 100%;
 	font-size: 100%;
@@ -40,16 +41,36 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*----------------------------------------------*/
-
+#date:before {
+    content: 'Start date';
+    margin-right: .6em;
+    color: #949494;
+ }
+#stime:before {
+    content: 'Start time';
+    margin-right: .6em;
+    color: #949494;
+ }
+#etime:before {
+    content: 'End time';
+    margin-right: .6em;
+    color: #949494;
+ }
 h2 {
     color: 000;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 input {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 100%;
     height: 30px;
+    padding: 5px;
+}
+textarea {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    height: 85px;
     padding: 5px;
 }
 .item_one-line {
@@ -63,6 +84,7 @@ input {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 40px 20px;
+    background: #FFFAFA;
 }
 .items-block__item {
     display: flex;
@@ -85,4 +107,7 @@ input {
     display: block;
     width: 35%;
     margin: 0 auto;
+}
+.items-block__submit {
+    cursor: pointer;
 }
